--- a/kubernetes/deployments/core/_networking/cilium/app/base-values.yaml
+++ b/kubernetes/deployments/core/_networking/cilium/app/base-values.yaml
@@ -1808,7 +1808,7 @@ vtep:
 # direct routing and the Kubernetes CIDR is included in the native routing CIDR,
 # the user must configure the routes to reach pods, either manually or by
 # setting the auto-direct-node-routes flag.
-ipv4NativeRoutingCIDR: ${IP_POD_CIDR_V4}
+ipv4NativeRoutingCIDR: "${IP_POD_CIDR_V4}"
 
 # -- (string) Allows to explicitly specify the IPv6 CIDR for native routing.
 # When specified, Cilium assumes networking for this CIDR is preconfigured and
